--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       - NODE_ENV=production
       - PORT=8080
       - MONGO_URI=mongodb://mongo:27017/swapsave
+      - JUDGE0_URL=http://host.docker.internal:2358
     expose:
       - "8080"
     networks:
