--- a/judge0.conf
+++ b/judge0.conf
@@ -8,7 +8,7 @@ JUDGE0_DEBUG=false
 JUDGE0_AUTH=false
 
 # Redis host (default: localhost)
-REDIS_HOST=redis
+REDIS_HOST=judge0-redis
 
 # Redis password (default: NO DEFAULT! MUST BE SET!)
 REDIS_PASSWORD=judge0pass
@@ -20,7 +20,7 @@ JUDGE0_WORKERS=2
 JUDGE0_MAX_QUEUE_SIZE=100
 
 # PostgreSQL host (default: localhost)
-POSTGRES_HOST=db
+POSTGRES_HOST=judge0-db
 
 # PostgreSQL port (default: 5432)
 POSTGRES_PORT=5432
