--- a/judge0.conf
+++ b/judge0.conf
@@ -1,65 +1,135 @@
-################################################################################
-# Judge0 Configuration File
-################################################################################
-# Enable debug mode (default: false)
-JUDGE0_DEBUG=false
+################################################################################################################################################################
 
-# Enable Auth0 (default: false)
-JUDGE0_AUTH=false
+# Judge0 Configuration File# Judge0 Configuration File
 
-# Redis host (default: localhost)
-REDIS_HOST=judge0-redis
+################################################################################################################################################################
 
-# Redis password (default: NO DEFAULT! MUST BE SET!)
-REDIS_PASSWORD=judge0pass
+# Enable debug mode (default: false)# Enable debug mode (default: false)
 
-# Default worker count (default: 2)
-JUDGE0_WORKERS=2
+JUDGE0_DEBUG=falseJUDGE0_DEBUG=false
 
-# Maximum queue size (default: 100)
-JUDGE0_MAX_QUEUE_SIZE=100
 
-# PostgreSQL host (default: localhost)
-POSTGRES_HOST=judge0-db
 
-# PostgreSQL port (default: 5432)
-POSTGRES_PORT=5432
+# Enable Auth0 (default: false)# Enable Auth0 (default: false)
 
-# PostgreSQL database (default: judge0)
-POSTGRES_DB=judge0
+JUDGE0_AUTH=falseJUDGE0_AUTH=false
 
-# PostgreSQL username (default: judge0)
-POSTGRES_USER=judge0
 
-# PostgreSQL password (default: judge0)
-POSTGRES_PASSWORD=judge0
 
-# CPU time limit for compilation (default: 10)
-CPU_TIME_LIMIT_COMPILE=20
+# Redis host (default: localhost)# Redis host (default: localhost)
 
-# CPU time limit for running code (default: 5)
-CPU_TIME_LIMIT_RUN=15
+REDIS_HOST=judge0-redisREDIS_HOST=judge0-redis
 
-# Memory limit (default: 128000)
-MEMORY_LIMIT=512000
 
-# Stack limit (default: 64000)
-STACK_LIMIT=128000
 
-# Max file size (default: 1024)
-MAX_FILE_SIZE=10240
+# Redis port (default: 6379)# Redis port (default: 6379)
 
-# Max processes and threads (default: 60)
-MAX_PROCESSES_AND_OR_THREADS=60
+REDIS_PORT=6379REDIS_PORT=6379
 
-# Enable per process and thread time limit (default: false)
-ENABLE_PER_PROCESS_AND_THREAD_TIME_LIMIT=false
 
-# Enable per process and thread memory limit (default: true)
-ENABLE_PER_PROCESS_AND_THREAD_MEMORY_LIMIT=true
 
-# Max queue size (default: 100)
-MAX_QUEUE_SIZE=100
+# Redis URL (complete connection string)# Redis URL (complete connection string)
 
-# Allow IPv4 address to be returned from DNS lookup (default: true)
-ALLOW_IPV4_ADDRESS_FROM_DNS_LOOKUP=true
+REDIS_URL=redis://judge0-redis:6379REDIS_URL=redis://judge0-redis:6379
+
+
+
+# Default worker count (default: 2)# Default worker count (default: 2)
+
+JUDGE0_WORKERS=2JUDGE0_WORKERS=2
+
+
+
+# Maximum queue size (default: 100)# Maximum queue size (default: 100)
+
+JUDGE0_MAX_QUEUE_SIZE=100JUDGE0_MAX_QUEUE_SIZE=100
+
+
+
+# PostgreSQL host (default: localhost)# PostgreSQL host (default: localhost)
+
+POSTGRES_HOST=judge0-dbPOSTGRES_HOST=judge0-db
+
+
+
+# PostgreSQL port (default: 5432)# PostgreSQL port (default: 5432)
+
+POSTGRES_PORT=5432POSTGRES_PORT=5432
+
+
+
+# PostgreSQL database (default: judge0)# PostgreSQL database (default: judge0)
+
+POSTGRES_DB=judge0POSTGRES_DB=judge0
+
+
+
+# PostgreSQL username (default: judge0)# PostgreSQL username (default: judge0)
+
+POSTGRES_USER=judge0POSTGRES_USER=judge0
+
+
+
+# PostgreSQL password (default: judge0)# PostgreSQL password (default: judge0)
+
+POSTGRES_PASSWORD=judge0POSTGRES_PASSWORD=judge0
+
+
+
+# CPU time limit for compilation (default: 10)# CPU time limit for compilation (default: 10)
+
+CPU_TIME_LIMIT_COMPILE=20CPU_TIME_LIMIT_COMPILE=20
+
+
+
+# CPU time limit for running code (default: 5)# CPU time limit for running code (default: 5)
+
+CPU_TIME_LIMIT_RUN=15CPU_TIME_LIMIT_RUN=15
+
+
+
+# Memory limit (default: 128000)# Memory limit (default: 128000)
+
+MEMORY_LIMIT=512000MEMORY_LIMIT=512000
+
+
+
+# Stack limit (default: 64000)# Stack limit (default: 64000)
+
+STACK_LIMIT=128000STACK_LIMIT=128000
+
+
+
+# Max file size (default: 1024)# Max file size (default: 1024)
+
+MAX_FILE_SIZE=10240MAX_FILE_SIZE=10240
+
+
+
+# Max processes and threads (default: 60)# Max processes and threads (default: 60)
+
+MAX_PROCESSES_AND_OR_THREADS=60MAX_PROCESSES_AND_OR_THREADS=60
+
+
+
+# Enable per process and thread time limit (default: false)# Enable per process and thread time limit (default: false)
+
+ENABLE_PER_PROCESS_AND_THREAD_TIME_LIMIT=falseENABLE_PER_PROCESS_AND_THREAD_TIME_LIMIT=false
+
+
+
+# Enable per process and thread memory limit (default: true)# Enable per process and thread memory limit (default: true)
+
+ENABLE_PER_PROCESS_AND_THREAD_MEMORY_LIMIT=trueENABLE_PER_PROCESS_AND_THREAD_MEMORY_LIMIT=true
+
+
+
+# Max queue size (default: 100)# Max queue size (default: 100)
+
+MAX_QUEUE_SIZE=100MAX_QUEUE_SIZE=100
+
+
+
+# Allow IPv4 address to be returned from DNS lookup (default: true)# Allow IPv4 address to be returned from DNS lookup (default: true)
+
+ALLOW_IPV4_ADDRESS_FROM_DNS_LOOKUP=trueALLOW_IPV4_ADDRESS_FROM_DNS_LOOKUP=true
